Improved error report.