@@ -6,33 +6,33 @@ import org.scutsu.market.models.GoodsDescription;
 import org.scutsu.market.models.Photo;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 public class GoodsDescriptionDiffer {
 
 	public Diff checkDiff(GoodsDescription oldDesc, GoodsDescription newDesc) {
-		List<Accessor> needReview = Arrays.asList(
+		List<Function<GoodsDescription, Object>> needReview = List.of(
 			GoodsDescription::getTitle,
 			GoodsDescription::getDetail,
 			GoodsDescription::getContactInfo,
 			d -> d.getPhotos().stream().map(Photo::getId).collect(Collectors.toSet()));
-		List<Accessor> updates = Arrays.asList(
+		List<Function<GoodsDescription, Object>> updates = List.of(
 			GoodsDescription::getBuyingPrice,
 			GoodsDescription::getSellingPrice,
 			GoodsDescription::getArea,
 			GoodsDescription::getActive,
 			d -> d.getCategory() == null ? null : d.getCategory().getId());
-		for (Accessor a : needReview) {
-			if (!Objects.equals(a.access(oldDesc), a.access(newDesc))) {
+		for (var a : needReview) {
+			if (!Objects.equals(a.apply(oldDesc), a.apply(newDesc))) {
 				return Diff.NEED_REVIEW;
 			}
 		}
-		for (Accessor a : updates) {
-			if (!Objects.equals(a.access(oldDesc), a.access(newDesc))) {
+		for (var a : updates) {
+			if (!Objects.equals(a.apply(oldDesc), a.apply(newDesc))) {
 				return Diff.UPDATED;
 			}
 		}
@@ -48,9 +48,5 @@ public class GoodsDescriptionDiffer {
 
 		private final boolean updated;
 		private final boolean needReview;
-	}
-
-	interface Accessor {
-		Object access(GoodsDescription desc);
 	}
 }
